Processor small fixes